--- a/howto/typecheck.ipynb
+++ b/howto/typecheck.ipynb
@@ -70,6 +70,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Annotation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Annotated\n",
+    "\n",
+    "@dataclass\n",
+    "class ValueRange:\n",
+    "    lo: int\n",
+    "    hi: int\n",
+    "\n",
+    "T1 = Annotated[int, ValueRange(-10, 5)]\n",
+    "T2 = Annotated[T1, ValueRange(-20, 3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "typing.Annotated[int, ValueRange(lo=-10, hi=5), ValueRange(lo=-20, hi=3)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## `TypedDict`\n",
     "\n",
     "(Python 3.8+)\n",
