--- a/pkg/pydantic.ipynb
+++ b/pkg/pydantic.ipynb
@@ -107,27 +107,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Serialization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 123,\n",
+       "{'id': 321,\n",
        " 'name': 'John Doe',\n",
        " 'signup_ts': datetime.datetime(2019, 6, 1, 12, 22),\n",
        " 'tastes': {'wine': 9, 'cheese': 7, 'cabbage': 1}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# convert the model to a dictionary\n",
-    "user.model_dump()"
+    "user_dict = user.model_dump()\n",
+    "user_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 321, 'name': 'John Doe'}\n",
+      "{'signup_ts': datetime.datetime(2019, 6, 1, 12, 22), 'tastes': {'wine': 9, 'cheese': 7, 'cabbage': 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Include\n",
+    "print(user.model_dump(include={\"id\", \"name\"}))\n",
+    "\n",
+    "# Exclude\n",
+    "print(user.model_dump(exclude={\"id\", \"name\"}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 321,\n",
+       " 'name': 'John Doe',\n",
+       " 'signup_ts': '2019-06-01T12:22:00',\n",
+       " 'tastes': {'wine': 9, 'cheese': 7, 'cabbage': 1}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# convert the model to a JSON\n",
+    "user_json_str = user.model_dump_json()\n",
+    "json.loads(user_json_str)"
    ]
   },
   {
@@ -161,6 +218,229 @@
     "    User(**external_data)  \n",
     "except ValidationError as e:\n",
     "    print(e.errors())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mutable Model\n",
+    "\n",
+    "By default, models are mutable and field values can be changed through attribute assignment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user.id = 321\n",
+    "assert user.id == 321"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Field\n",
+    "\n",
+    "The `Field` function is used to customize and add metadata to fields of models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Default values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User(name='John Doe')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "\n",
+    "class User(BaseModel):\n",
+    "    name: str = Field(default='John Doe')\n",
+    "\n",
+    "\n",
+    "user = User()\n",
+    "user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also use `default_factory` to define a callable that will be called to generate a default value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from uuid import uuid4\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "\n",
+    "class User(BaseModel):\n",
+    "    id: str = Field(default_factory=lambda: uuid4().hex)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JSON Schema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating JSON Schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"$defs\": {\n",
+      "    \"FooBar\": {\n",
+      "      \"properties\": {\n",
+      "        \"count\": {\n",
+      "          \"title\": \"Count\",\n",
+      "          \"type\": \"integer\"\n",
+      "        },\n",
+      "        \"size\": {\n",
+      "          \"anyOf\": [\n",
+      "            {\n",
+      "              \"type\": \"number\"\n",
+      "            },\n",
+      "            {\n",
+      "              \"type\": \"null\"\n",
+      "            }\n",
+      "          ],\n",
+      "          \"default\": null,\n",
+      "          \"title\": \"Size\"\n",
+      "        }\n",
+      "      },\n",
+      "      \"required\": [\n",
+      "        \"count\"\n",
+      "      ],\n",
+      "      \"title\": \"FooBar\",\n",
+      "      \"type\": \"object\"\n",
+      "    },\n",
+      "    \"Gender\": {\n",
+      "      \"enum\": [\n",
+      "        \"male\",\n",
+      "        \"female\",\n",
+      "        \"other\",\n",
+      "        \"not_given\"\n",
+      "      ],\n",
+      "      \"title\": \"Gender\",\n",
+      "      \"type\": \"string\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"description\": \"This is the description of the main model\",\n",
+      "  \"properties\": {\n",
+      "    \"foo_bar\": {\n",
+      "      \"$ref\": \"#/$defs/FooBar\"\n",
+      "    },\n",
+      "    \"Gender\": {\n",
+      "      \"anyOf\": [\n",
+      "        {\n",
+      "          \"$ref\": \"#/$defs/Gender\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"type\": \"null\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"default\": null\n",
+      "    },\n",
+      "    \"snap\": {\n",
+      "      \"default\": 42,\n",
+      "      \"description\": \"this is the value of snap\",\n",
+      "      \"exclusiveMaximum\": 50,\n",
+      "      \"exclusiveMinimum\": 30,\n",
+      "      \"title\": \"The Snap\",\n",
+      "      \"type\": \"integer\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"required\": [\n",
+      "    \"foo_bar\"\n",
+      "  ],\n",
+      "  \"title\": \"Main\",\n",
+      "  \"type\": \"object\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from enum import Enum\n",
+    "\n",
+    "from typing import Annotated\n",
+    "\n",
+    "from pydantic import BaseModel, Field\n",
+    "from pydantic.config import ConfigDict\n",
+    "\n",
+    "\n",
+    "class FooBar(BaseModel):\n",
+    "    count: int\n",
+    "    size: float | None = None\n",
+    "\n",
+    "\n",
+    "class Gender(str, Enum):\n",
+    "    male = 'male'\n",
+    "    female = 'female'\n",
+    "    other = 'other'\n",
+    "    not_given = 'not_given'\n",
+    "\n",
+    "\n",
+    "class MainModel(BaseModel):\n",
+    "    \"\"\"\n",
+    "    This is the description of the main model\n",
+    "    \"\"\"\n",
+    "\n",
+    "    model_config = ConfigDict(title='Main')\n",
+    "\n",
+    "    foo_bar: FooBar\n",
+    "    gender: Annotated[Gender | None, Field(alias='Gender')] = None\n",
+    "    snap: int = Field(\n",
+    "        42,\n",
+    "        title='The Snap',\n",
+    "        description='this is the value of snap',\n",
+    "        gt=30,\n",
+    "        lt=50,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "main_model_schema = MainModel.model_json_schema() \n",
+    "print(json.dumps(main_model_schema, indent=2))"
    ]
   }
  ],
