--- a/pkg/pydantic.ipynb
+++ b/pkg/pydantic.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,37 @@
     "\n",
     "\n",
     "main_model_schema = MainModel.model_json_schema() \n",
-    "print(json.dumps(main_model_schema, indent=2))"
+    "# JSON String\n",
+    "print(json.dumps(main_model_schema, indent=2)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Type Adapter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'items': {'type': 'integer'}, 'type': 'array'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "from pydantic import TypeAdapter\n",
+    "\n",
+    "adapter = TypeAdapter(List[int])\n",
+    "print(adapter.json_schema())"
    ]
   }
  ],
