--- a/fs/fs.ipynb
+++ b/fs/fs.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from siuba import _, group_by, mutate, select\n",
+    "from siuba import _, group_by, mutate, select, filter\n",
     "import fs"
    ]
   },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "[PosixPath('d/test1.txt'), PosixPath('d/e2'), PosixPath('d/e1')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,12 +57,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Custom Implement"
+    "### Custom Implement `fs.dir_ls()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,12 +71,14 @@
        "[PosixPath('d/test1.txt'),\n",
        " PosixPath('d/e2'),\n",
        " PosixPath('d/e2/test3.txt'),\n",
+       " PosixPath('d/e2/test3-cp.txt'),\n",
        " PosixPath('d/e1'),\n",
        " PosixPath('d/e1/test2.txt'),\n",
+       " PosixPath('d/e1/test2-cp.txt'),\n",
        " PosixPath('d/e1/test2-copy.txt')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,14 +132,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>d/e1</td>\n",
+       "      <td>d/e2/test3-cp.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>d/e1/test2.txt</td>\n",
+       "      <td>d/e1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>d/e1/test2.txt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>d/e1/test2-cp.txt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>d/e1/test2-copy.txt</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -149,12 +159,14 @@
        "0          d/test1.txt\n",
        "1                 d/e2\n",
        "2       d/e2/test3.txt\n",
-       "3                 d/e1\n",
-       "4       d/e1/test2.txt\n",
-       "5  d/e1/test2-copy.txt"
+       "3    d/e2/test3-cp.txt\n",
+       "4                 d/e1\n",
+       "5       d/e1/test2.txt\n",
+       "6    d/e1/test2-cp.txt\n",
+       "7  d/e1/test2-copy.txt"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +228,7 @@
        "PosixPath('test1.txt')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,16 +286,26 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>d/e2/test3-cp.txt</td>\n",
+       "      <td>test3-cp.txt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>d/e1</td>\n",
        "      <td>e1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>d/e1/test2.txt</td>\n",
        "      <td>test2.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <td>d/e1/test2-cp.txt</td>\n",
+       "      <td>test2-cp.txt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>d/e1/test2-copy.txt</td>\n",
        "      <td>test2-copy.txt</td>\n",
        "    </tr>\n",
@@ -296,12 +318,14 @@
        "0          d/test1.txt       test1.txt\n",
        "1                 d/e2              e2\n",
        "2       d/e2/test3.txt       test3.txt\n",
-       "3                 d/e1              e1\n",
-       "4       d/e1/test2.txt       test2.txt\n",
-       "5  d/e1/test2-copy.txt  test2-copy.txt"
+       "3    d/e2/test3-cp.txt    test3-cp.txt\n",
+       "4                 d/e1              e1\n",
+       "5       d/e1/test2.txt       test2.txt\n",
+       "6    d/e1/test2-cp.txt    test2-cp.txt\n",
+       "7  d/e1/test2-copy.txt  test2-copy.txt"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,12 +368,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Custom Function"
+    "### Custom `fs.file_copy()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -376,13 +400,213 @@
        " PosixPath('d/e1/test2-copy.txt')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fs.dir_ls(\"d\", recurse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Copy Folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def dir_copy(src, dst):\n",
+    "    shutil.copytree(src, dst)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>paths</th>\n",
+       "      <th>is_file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>d/test1.txt</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>d/e2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>d/e2/test3.txt</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>d/e2/test3-cp.txt</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>d/e1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>d/e1/test2.txt</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>d/e1/test2-cp.txt</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>d/e1/test2-copy.txt</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 paths  is_file\n",
+       "0          d/test1.txt     True\n",
+       "1                 d/e2    False\n",
+       "2       d/e2/test3.txt     True\n",
+       "3    d/e2/test3-cp.txt     True\n",
+       "4                 d/e1    False\n",
+       "5       d/e1/test2.txt     True\n",
+       "6    d/e1/test2-cp.txt     True\n",
+       "7  d/e1/test2-copy.txt     True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_paths_df2 = d_paths_df.assign(is_file = d_paths_df[\"paths\"].map(str).str.contains(\"\\\\.txt\"))\n",
+    "d_paths_df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>paths</th>\n",
+       "      <th>is_file</th>\n",
+       "      <th>new_paths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>d/e2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>d/e2_cp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>d/e1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>d/e1_cp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  paths  is_file new_paths\n",
+       "1  d/e2    False   d/e2_cp\n",
+       "4  d/e1    False   d/e1_cp"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_paths_df3 = (d_paths_df2\n",
+    "               >> filter(_.is_file == False)\n",
+    "               >> mutate(new_paths=_.paths.map(str) + \"_cp\"))\n",
+    "\n",
+    "d_paths_df3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Custom `fs.dir_copy()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs.dir_copy(d_paths_df3[\"paths\"], d_paths_df3[\"new_paths\"])"
    ]
   }
  ],
