--- a/logging/logging-basic.qmd
+++ b/logging/logging-basic.qmd
@@ -91,7 +91,7 @@ def custom_function(param):
         return f"Processed value: {param}"
 
 # Logging setup function
-def _log():
+def _get_log_file():
     """Sets up logging for wrapper_function with a timestamped log file."""
     # Create a timestamped log file name
     timestamp = datetime.now().strftime("%Y-%m-%d_%H%M%S")
@@ -124,7 +124,7 @@ def _log():
 # Wrapper function
 def wrapper_function(params):
     """Wrapper function that runs custom_function in a loop."""
-    logger, log_file = _log()  # Set up logging
+    logger, log_file = _get_log_file()  # Set up logging
     for param in params:
         result = custom_function(param)  # Call custom_function
         if "Invalid" in result:  # Log result if it's a warning
@@ -183,4 +183,38 @@ Inside `log/app-20241123-154530.log`, you would see:
 2024-11-23 15:45:30,128 - INFO - Result: Invalid input
 2024-11-23 15:45:30,129 - INFO - Result: Processed value: 0
 2024-11-23 15:45:30,130 - INFO - Result: Processed value: 20
+```
+
+## Capture Warning
+
+
+```{python}
+import warnings
+
+# Child function that issues warnings
+def child_fn(param):
+    if param < 0:
+        warnings.warn(f"Received negative value: {param}", UserWarning)
+    else:
+        warnings.warn(f"Processed value: {param}", UserWarning)
+
+# Parent function that checks if warnings are issued
+def parent_fn(param):
+    with warnings.catch_warnings(record=True) as caught_warnings:
+        warnings.simplefilter("always")  # Ensure all warnings are captured
+        child_fn(param)  # Call the child function
+        
+        # Check if any warnings were issued
+        if caught_warnings:
+            print("Warning detected!")
+            for warning in caught_warnings:
+                print(f"Captured warning: {warning.message}")
+        else:
+            print("No warnings issued.")
+```
+
+
+```{python}
+parent_fn(-5)  # Should capture a warning
+parent_fn(10)  # Should capture a warning
 ```
