add minimax game

--- a/playground/fruits.ipynb
+++ b/playground/fruits.ipynb
@@ -139,6 +139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regular"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -171,8 +178,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DataClass"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +225,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regular"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -244,12 +265,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### DataClass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Basket:\n",
+    "    location: str\n",
+    "    oranges: List[Orange] = field(default_factory=list)\n",
+    "\n",
+    "    def add_orange(self, orange: Orange) -> None:\n",
+    "        \"\"\"Add an orange to the basket.\"\"\"\n",
+    "        self.oranges.append(orange)\n",
+    "        orange.basket = self\n",
+    "\n",
+    "    def sell(self, customer: str) -> None:\n",
+    "        \"\"\"Sell all oranges in the basket to a customer.\"\"\"\n",
+    "        print(f\"Sold {len(self.oranges)} oranges to {customer}.\")\n",
+    "        self.oranges.clear()\n",
+    "\n",
+    "    def discard(self) -> None:\n",
+    "        \"\"\"Discard all oranges in the basket.\"\"\"\n",
+    "        print(f\"Discarded {len(self.oranges)} oranges from basket at {self.location}.\")\n",
+    "        self.oranges.clear()\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Basket(location='{self.location}', oranges_count={len(self.oranges)})\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Usage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
